Fix text button background on Firefox

--- a/admin-dev/themes/new-theme/scss/theme.scss
+++ b/admin-dev/themes/new-theme/scss/theme.scss
@@ -93,6 +93,7 @@ span.twitter-typeahead {
 .btn.btn-text {
   cursor: pointer;
   padding: 0;
+  background: transparent;
 
   &:focus {
     box-shadow: none;
